# simultaneous-sort

./: CMakeLists.txt  README.md
include/: proxy.inl  simultaneous_sort.inl  value_wrapper.h  value_wrapper.inl
src/: test.cpp
